# modular_lang

./: Cargo.toml
core/: Cargo.toml
core/src/: lib.rs  types.rs
core/src/types/: primitives.rs
lexer/: Cargo.toml
lexer/src/: lexing.rs  lib.rs  tokenization.rs
lexer/src/tokenization/: subtypes.rs
virtual_machine/: Cargo.toml
virtual_machine/src/: bytes.rs  flags.rs  instruction_set.rs  lib.rs  main.rs  memory.rs  registers.rs  resolution.rs  vm.rs
virtual_machine/src/bytes/: machine_code_reader.rs  machine_code_writer.rs
virtual_machine/src/instruction_set/: arithmetic.rs  comparison.rs  immediate.rs
virtual_machine/src/intrinsics/: known_types.rs  mod.rs  simplification.rs
virtual_machine/src/resolution/: functions.rs  types.rs
virtual_machine/src/resolution/types/: descriptor.rs  mod.rs
virtual_machine/tests/: fibonacci.rs
