[package]
name = "virtual_machine"
version = "0.1.0"
authors = ["Joshua Radin <jradin16@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.4"
regex = "1.3.9"
lazy_static = "1.4.0"
trees = "0.3.0"